--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "aos": "^2.3.4",
     "core-js": "^3.6.5",
+    "swiper": "^6.8.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -29,5 +30,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
+  },
+  "rules": {
+    "strict": "off"
   }
 }
