--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@popperjs/core": "^2.9.2",
     "@vuelidate/core": "^2.0.0-alpha.22",
     "@vuelidate/validators": "^2.0.0-alpha.19",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "swiper": "^6.8.0",
     "vee-validate": "^4.4.7",
