--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # SSR BUILD
 VUE_APP_ENV = SSR
-VUE_APP_API_URL = http://localhost:3000/api
-#VUE_APP_API_URL = https://ksekar25.herokuapp.com/api
+#VUE_APP_API_URL = http://localhost:3000/api
+VUE_APP_API_URL = https://ksekar25.herokuapp.com/api
